--- a/packages/wpcom-proxy-request/package.json
+++ b/packages/wpcom-proxy-request/package.json
@@ -42,7 +42,7 @@
 		"component-event": "^0.1.4",
 		"debug": "^4.1.1",
 		"progress-event": "^1.0.0",
-		"uid": "^0.0.2",
+		"uuid": "^7.0.1",
 		"wp-error": "^1.3.0"
 	}
 }
